--- a/soma_de_numeros_via_formulario.html
+++ b/soma_de_numeros_via_formulario.html
@@ -30,15 +30,17 @@
                 //Entrada de dados
             numero1= parseInt(document.Formcalculo.primeiro.value);
             numero2= parseInt(document.Formcalculo.segundo.value);
+            numero3 = parseInt(document.Formcalculo.terceiro.value);
 
 
             //Calculo
 
-            resultado = parseInt(numero1) + parseInt(numero2);
+            resultado = parseInt(numero1) + parseInt(numero2) + parseInt(numero3);
 
 
             //Saida de dados
             window.alert('A soma dos números digitados é '+ resultado.toString());
+            
             }
 
         </script>
